@@ -1,5 +1,8 @@
 2018-01-31    <cerebrum@cleomedes.uit.no>
 
+	* export_cristin.py (LTPersonRepresentation.__init__): Removed function that validates fnr. The test will
+	fail for all fnr with 5 0(zero) at the end (coming from PAGA)
+
 	* export_safecom.py (safecom_export.list_affiliations): moved logger.warn to logger.debug
 
 2018-01-24    <cerebrum@cleomedes.uit.no>
